Added A-Poll (1of2from30)

--- a/nginx/capex.me.conf
+++ b/nginx/capex.me.conf
@@ -53,3 +53,30 @@ server {
                 proxy_cache_bypass $http_upgrade;
         }
 }
+
+server {
+    if ($host = poll.capex.me) {
+        return 301 https://$host$request_uri;
+    }
+    
+    
+        listen 80;
+        server_name poll.capex.me www.poll.capex.me;
+        return 301 https://$host$request_uri;
+    
+    
+}
+
+server {
+        listen 443 ssl;
+        server_name poll.capex.me www.poll.capex.me;
+    
+        location /  {
+                proxy_pass    http://localhost:3033/;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+        }
+}
