Updated the website UI

--- a/nginx/capex.me.conf
+++ b/nginx/capex.me.conf
@@ -9,6 +9,8 @@ server {
         return 301 https://$host$request_uri;
 
 
+
+
 }
 
 server {
@@ -24,7 +26,6 @@ server {
                 proxy_set_header Host $host;
                 proxy_cache_bypass $http_upgrade;
         }
-
 }
 
 server {
@@ -36,6 +37,8 @@ server {
         listen 80;
         server_name share.capex.me www.share.capex.me;
         return 301 https://$host$request_uri;
+
+
 
 
 }
@@ -55,24 +58,26 @@ server {
 }
 
 server {
-    if ($host = poll.capex.me) {
+    if ($host = read.capex.me) {
         return 301 https://$host$request_uri;
     }
     
     
         listen 80;
-        server_name poll.capex.me www.poll.capex.me;
+        server_name read.capex.me www.read.capex.me;
         return 301 https://$host$request_uri;
     
     
+
+
 }
 
 server {
         listen 443 ssl;
-        server_name poll.capex.me www.poll.capex.me;
+        server_name read.capex.me www.read.capex.me;
     
         location /  {
-                proxy_pass    http://localhost:3033/;
+                proxy_pass    http://localhost:3001/;
                 proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection 'upgrade';
