--- a/read/package.json
+++ b/read/package.json
@@ -4,6 +4,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
-    "https": "^1.0.0"
+    "gray-matter": "^4.0.3",
+    "https": "^1.0.0",
+    "markdown-it": "^12.0.6"
   }
 }
