--- a/nginx/capex.me.conf
+++ b/nginx/capex.me.conf
@@ -1,87 +1,26 @@
 server {
-    if ($host = capex.me) {
-        return 301 https://$host$request_uri;
-    }
-
-
-        listen 80;
-        server_name capex.me www.capex.me;
-        return 301 https://$host$request_uri;
-
-
-
-
+	listen 80;
+	server_name capex.me;
+	
+	location /  {
+		proxy_pass    http://localhost:3000;
+	}
 }
 
 server {
-        listen 443 ssl;
-        server_name capex.me www.capex.me;
-        
-        
-        location /  {
-                proxy_pass    http://localhost:8081;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection 'upgrade';
-                proxy_set_header Host $host;
-                proxy_cache_bypass $http_upgrade;
-        }
+	listen 80;
+	server_name share.capex.me;
+	
+	location /  {
+		proxy_pass    http://localhost:3001;
+	}
 }
 
 server {
-    if ($host = share.capex.me) {
-        return 301 https://$host$request_uri;
-    }
-
-
-        listen 80;
-        server_name share.capex.me www.share.capex.me;
-        return 301 https://$host$request_uri;
-
-
-
-
-}
-
-server {
-        listen 443 ssl;
-        server_name share.capex.me www.share.capex.me;
-
-        location /  {
-                proxy_pass    http://localhost:3000/;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection 'upgrade';
-                proxy_set_header Host $host;
-                proxy_cache_bypass $http_upgrade;
-        }
-}
-
-server {
-    if ($host = read.capex.me) {
-        return 301 https://$host$request_uri;
-    }
-    
-    
-        listen 80;
-        server_name read.capex.me www.read.capex.me;
-        return 301 https://$host$request_uri;
-    
-    
-
-
-}
-
-server {
-        listen 443 ssl;
-        server_name read.capex.me www.read.capex.me;
-    
-        location /  {
-                proxy_pass    http://localhost:3001/;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection 'upgrade';
-                proxy_set_header Host $host;
-                proxy_cache_bypass $http_upgrade;
-        }
+	listen 80;
+	server_name read.capex.me;
+	
+	location /  {
+		proxy_pass    http://localhost:3002;
+	}
 }
